# fretboard_cli

./: Cargo.toml  README.md
src/: fretboard.rs  main.rs  note.rs
