[package]
name = "fretboard_cli"
version = "1.0.0"
authors = ["zee-mzha <zee.mzha@gmail.com>"]
edition = "2018"
description = "A command line program to help with memorizing the notes on a fretted instrument"
repository = "https://github.com/zee-mzha/fretboard_cli"
license = "LGPL-2.1-only"
keywords = ["fret", "frets", "instrument"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
rand = "0.7.3"
thiserror = "1.0.20"
